--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "format": "prettier 'src/**/*.{tsx,ts,js}' --write"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.504.0",
     "@mdi/js": "^7.0.96",
     "@reduxjs/toolkit": "^1.9.5",
+    "aws-sdk": "^2.1549.0",
+    "axios": "^1.6.7",
     "chart.js": "^4.4.0",
     "formik": "^2.4.2",
     "next": "^13.4.7",
@@ -18,8 +21,12 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.1",
+    "react-next-toast": "^2.0.1",
     "react-redux": "^8.1.1",
-    "swr": "^2.2.0"
+    "swr": "^2.2.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
