--- a/.env
+++ b/.env
@@ -3,3 +3,12 @@ AWS_SECRET_ACCESS_KEY=8hDu/FKGYLS31YM7wq9sA4m3VTeM3uuoBdxxL7Ww
 BUCKET_NAME=lpk-harehare
 ENDPOINT_URL=https://nos.jkt-1.neo.id
 REGION=us-east-1
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="mysql://root:@localhost:3306/sql_lpk_register"
