--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.504.0",
     "@mdi/js": "^7.0.96",
+    "@prisma/client": "^5.9.1",
     "@reduxjs/toolkit": "^1.9.5",
     "aws-sdk": "^2.1549.0",
     "axios": "^1.6.7",
     "chart.js": "^4.4.0",
     "formik": "^2.4.2",
     "next": "^13.4.7",
+    "next-auth": "^4.24.5",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -42,6 +44,7 @@
     "postcss": "^8.4.24",
     "postcss-import": "^15.1.0",
     "prettier": "^3.0.3",
+    "prisma": "^5.9.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.6"
   }
