feat: login controller

--- a/.env
+++ b/.env
@@ -4,6 +4,9 @@ BUCKET_NAME=lpk-harehare
 ENDPOINT_URL=https://nos.jkt-1.neo.id
 REGION=us-east-1
 
+NEXTAUTH_URL=http://localhost:3000/api/auth
+NEXTAUTH_SECRET="wU5zDpB9pWu0tzPc2FGyD67kEylA3WVR3hYvXQG76YM="
+
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
