--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "aws-sdk": "^2.1549.0",
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "chart.js": "^4.4.0",
     "formik": "^2.4.2",
     "next": "^13.4.7",
@@ -28,7 +29,8 @@
     "react-next-toast": "^2.0.1",
     "react-redux": "^8.1.1",
     "swr": "^2.2.0",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
