feat: add question to database

--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ REGION=us-east-1
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:@localhost:3306/sql_lpk_register"
+DATABASE_URL="mysql://root:@localhost:3306/lpk_dashboard"
