--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-next-toast": "^2.0.1",
     "react-redux": "^8.1.1",
     "swr": "^2.2.0",
-    "yup": "^1.3.3"
+    "uuid": "^9.0.1",
+    "yup": "^1.3.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
@@ -46,6 +48,6 @@
     "prettier": "^3.0.3",
     "prisma": "^5.9.1",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.6"
+    "typescript": "^5.3.3"
   }
 }
