--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "swr": "^2.2.0",
     "uuid": "^9.0.1",
     "yup": "^1.3.3",
-    "zod": "^3.22.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
