feat: calon student list with detail

--- a/.env
+++ b/.env
@@ -14,4 +14,4 @@ NEXTAUTH_SECRET="wU5zDpB9pWu0tzPc2FGyD67kEylA3WVR3hYvXQG76YM="
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:@localhost:3306/lpk_dashboard"
+DATABASE_URL="mysql://root:@localhost:3306/lpk"
