--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.0",
+    "formidable": "^3.5.1",
     "formik": "^2.4.2",
     "next": "^13.4.7",
     "next-auth": "^4.24.5",
@@ -30,6 +31,7 @@
     "react-redux": "^8.1.1",
     "swr": "^2.2.0",
     "uuid": "^9.0.1",
+    "xlsx": "^0.18.5",
     "yup": "^1.3.3",
     "zod": "^3.22.4"
   },
