--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-hot-toast": "^2.4.1",
     "react-next-toast": "^2.0.1",
     "react-redux": "^8.1.1",
+    "react-select": "^5.8.0",
     "swr": "^2.2.0",
     "uuid": "^9.0.1",
     "xlsx": "^0.18.5",
