fix: several data on description
- mengecek whatsapp yang belum sampai pada siswa wj
- mengganti logic ujian kedalam result
- menambahkan timeout ketika 30 detik tidak mendapatkan respon
- memperbaiki size dari notifikasi time up

--- a/.env
+++ b/.env
@@ -22,3 +22,10 @@ AWS_S3_SECRET_KEY=8hDu/FKGYLS31YM7wq9sA4m3VTeM3uuoBdxxL7Ww
 AWS_S3_BUCKET=lpk-harehare
 AWS_S3_ENDPOINT=https://nos.jkt-1.neo.id
 AWS_S3_URL_ACCESS=https://lpk-harehare.nos.jkt-1.neo.id/
+
+MEKARI_BASEURL="https://sandbox-api.mekari.com"
+MEKARI_HMAC_VALIDATION="/v2/esign-hmac/v1/profile"
+MEKARI_AUTOSIGN_GLOBAL="/v2/esign-hmac/v1/auto_sign"
+MEKARI_ESIGN_GLOBAL=
+MEKARI_ESIGN_GLOBAL_BATCH=
+MEKARI_WEBHOOK=
