--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.0",
+    "crypto": "^1.0.1",
     "file-type": "^19.0.0",
     "filepond": "^4.30.6",
     "filepond-plugin-file-validate-type": "^1.2.9",
